# FirstPolymarketTradingBot_Rust_Lost3-In1hr

./: Cargo.toml  README.md
src/: config.rs  get_price_info.rs  get_trend.rs  main.rs  util_functions.rs
src/get_trend/: binance.rs  bitget.rs  coinbase.rs  kraken.rs  okx.rs
