[package]
name = "main0"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = "1.5.2"
anyhow = "1.0.100"
dotenvy = "0.15.7"
polymarket-client-sdk = { version = "0.3", features = ["ws"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde_json = { version = "1.0.149" }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.43"
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures = "0.3.31"
